# Another-FFmpeg-demo

./: CMakeLists.txt  README.md
include/: audiooutput.h  avframequeue.h  avpacketqueue.h  decodethread.h  demuxthread.h  log.h  queue.h  state.h  thread.h  videooutput.h
src/: audiooutput.cpp  avframequeue.cpp  avpacketqueue.cpp  decodethread.cpp  demuxthread.cpp  log.cpp  main.cpp  videooutput.cpp
